Cleanup BuckStyleImmutable to BuckStyleValue cxx packages ..14/n
Reviewed By: stepancheg

shipit-source-id: 3fe4072d107285dabd8e9cdd1a007e80e3fc09c0